Adding highchart library locally

--- a/DYF/Views/Pesee/NouvellePesee.cshtml
+++ b/DYF/Views/Pesee/NouvellePesee.cshtml
@@ -32,7 +32,7 @@
     @Scripts.Render("~/Plugins/materialize-stepper/materialize-stepper.js")
     @Scripts.Render("~/Plugins/mustache/mustache.min.js")
     @Scripts.Render("~/Plugins/DataTable/datatables.min.js")
-    <script src="https://code.highcharts.com/highcharts.src.js"></script>
+    @Scripts.Render("~/Plugins/Highcharts/highcharts.src.js")
 
 }
 
