Added local materialize icon Added json reference looping ignore

--- a/DYF/Views/Shared/_Layout.cshtml
+++ b/DYF/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/materialize")
+    <link href="@Url.Content("~/fonts/materialize/material-icons.css")" rel="stylesheet" />
         @*<link href="~/Content/materialize-orange-deep-orange.css" rel="stylesheet" />*@
     @RenderSection("css", false)
 </head>
