Added virtual keyword to all navigation properties to enable lazyloading Added Save functionnality to end the process

--- a/DYF/Views/Pesee/_step1.cshtml
+++ b/DYF/Views/Pesee/_step1.cshtml
@@ -41,10 +41,10 @@
                 </div>
                 <div class="col s12 m6 l6">
                     <div class="input-field col s12">
-                        <input name="typePesee" type="radio" id="individuelle" checked />
-                        <label for="test1">Individuelle</label>
-                        <input name="typePesee" type="radio" id="groupee" />
-                        <label for="test2">Groupée</label>
+                        <input name="typePesee" type="radio" id="individuelle" value="2" checked />
+                        <label for="individuelle">Individuelle</label>
+                        <input name="typePesee" type="radio" id="groupee" value="1" />
+                        <label for="groupee">Groupée</label>
                     </div>
 
                 </div>
