--- a/DYF/Views/Pesee/_step3.cshtml
+++ b/DYF/Views/Pesee/_step3.cshtml
@@ -2,7 +2,7 @@
 <div class="step-content">
     <div class="card">
         <div class="row card-header">
-            Résultat de la pesée
+            Résultat de la pesée individuelle : Bande Test - Batiment yy - Semaine xxx
             <a href='#' class='dropdown-button card-header-option' data-activates='dropdown1'><i class="material-icons right">more_vert</i></a>
             <ul id='dropdown1' class='dropdown-content'>
                 <li><a href="#!">one</a></li>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="row step-actions">
-        <a class="waves-effect waves-light btn" id="firstStep">SUIVANT</a>
+        <a class="waves-effect waves-light btn" id="endOfThirdStep">Enregistrer </a>
         <button class="waves-effect waves-dark btn-flat previous-step">Precedent</button>
     </div>
 </div>
