--- a/DYF/Views/Pesee/_step1.cshtml
+++ b/DYF/Views/Pesee/_step1.cshtml
@@ -33,9 +33,8 @@
             </div>
             <div class="row">
                 <div class="col s12 m6 l6">
-                    <div class="input-field col s12">
-                        <input type="text" class="datepicker date-required" id="datePesee" name="datePesee">
-                        <label for="datePesee">Selectionner la date de la pesée</label>
+                    <div class="input-field col s12" id="datePeseeDiv">
+                        
                     </div>
 
                 </div>
@@ -57,6 +56,7 @@
         <a class="waves-effect waves-light btn" id="endOfFirstStep">SUIVANT</a>
     </div>
 </div>
-@Html.Partial("~/Views/Pesee/selectTemplate.cshtml")
+@Html.Partial("~/Views/MustacheTemplate/selectTemplate.cshtml")
+@Html.Partial("~/Views/MustacheTemplate/datePickerTemplate.cshtml")
 
 
