--- a/DYF/Views/Pesee/_step3.cshtml
+++ b/DYF/Views/Pesee/_step3.cshtml
@@ -1,13 +1,13 @@
 ﻿<div class="step-title waves-effect">Résultat</div>
 <div class="step-content">
     <div class="card">
-        <div class="row card-header">
+        <div class="row card-header" id="step3Header">
             Résultat de la pesée individuelle : Bande Test - Batiment yy - Semaine xxx
-            <a href='#' class='dropdown-button card-header-option' data-activates='dropdown1'><i class="material-icons right">more_vert</i></a>
+            @*<a href='#' class='dropdown-button card-header-option' data-activates='dropdown1'><i class="material-icons right">more_vert</i></a>
             <ul id='dropdown1' class='dropdown-content'>
                 <li><a href="#!">one</a></li>
                 <li><a href="#!">two</a></li>
-            </ul>
+            </ul>*@
         </div>
         <div class="row" id="statsResults">
             @Html.Partial("~/Views/Pesee/_step3CardTemplate.cshtml")
